src/objects/FSTR__Orchestrate_Object__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FSTR__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Object</label>
        <type>Checkbox</type>
    </fields>
    <label>Conga Orchestrate Object</label>
</CustomObject>